fix content spacing (left/right) to be the same ( Header and Main Content)

--- a/src/themes/default/styles/component.layout.css
+++ b/src/themes/default/styles/component.layout.css
@@ -86,7 +86,7 @@ $header-height: 96px;
         overflow: hidden;
         overflow-y: auto;
 
-        padding: calc($unit * 3) calc($unit * 8);
+        padding: calc($unit * 3) calc($unit * 2);
 
         &.is-collapsed {
 
@@ -102,17 +102,15 @@ $header-height: 96px;
                 } 
             }
         }
-
-        @media (--screen-to-xlrg) {
-            padding: calc($unit * 3) calc($unit * 4);
-        }
         
         @media (--screen-from-lrg) {
             left: calc($aside-width - calc($unit * 13));
+            padding: calc($unit * 3) calc($unit * 4);
         }
         
         @media (--screen-from-xlrg) {
             left: $aside-width;
+            padding: calc($unit * 3) calc($unit * 8);
         }
     }
 
